# private_rag_agent_platform

./: .gitattributes  .gitignore  LICENSE  README.md  docs
agent_engine/: Dockerfile  main.py  requirements.txt
backend_django/: Dockerfile  manage.py  requirements.txt
backend_django/api/: views.py
backend_django/rag_project/: settings.py
backend_django/scripts/: batch_import_kb.py
cpp_gateway/: CMakeLists.txt  Dockerfile  config.cpp  config.hpp  dev_health_stub.c  epoll_server.cpp  epoll_server.hpp  main.cpp
deploy/: .env.example  docker-compose.yml  目录设计.md
deploy/init_sql/: init.sql
deploy/nginx/: nginx.conf
deploy/redis/: redis.conf
deploy/scripts/: batch_import_docs.sh  clean_log.sh  package_project.sh  restart_all.sh
docs/: 02_接口规范.md  03_开发规范.md  04_部署运维.md
docs/img/: 整体四层分层拓扑架构图.excalidraw
evaluation_module/: Dockerfile  main.py  requirements.txt
